# Fundraising_BuisnessIntelligenceModel

./: README.md  Sujalkarbhari1.docx  main.py  pyproject.toml
Dashboard/: fundraising.pbix
Datasets/: FundRaise_CompanyDataset.csv
data/raw/: FundRaise_CompanyDataset.csv
experiments/: EDA.ipynb
