[project]
name = "fundraising-buisnessintelligencemodel"
version = "0.1.0"
author = "Sujal Karbhari"
author-email = "karbharisujal1@gmail.com"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.2",
    "gradio>=6.3.0",
    "ipykernel>=7.1.0",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.8",
    "mlflow>=3.8.1",
    "numpy>=2.4.1",
    "optuna>=4.6.0",
    "pandas>=2.3.3",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
    "uvicorn>=0.40.0",
]
